fix alignment questions and checkmarks

--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ canvas{
 	left: 0;
 	height: 20px;
 	width: 20px;
-	margin: 4px 10px 0px 0px;
+	margin: 2px 10px 0px 0px;
 	background-color: #ccc;
 	border-radius: 50%;
 	vertical-align:top;
